# Samurai_Codes

./: .gitignore  README.md
Dam_Break/: CMakeLists.txt  configure.sh  dam_break.cpp  input.json  main.cpp
Dam_Break/include/: Exact_Godunov_flux.hpp  HLLC_flux.hpp  HLL_flux.hpp  Rusanov_flux.hpp  barotropic_eos.hpp  containers.hpp  dam_break.hpp  flux_base.hpp  prediction.hpp  schemes.hpp  user_bc.hpp
Dam_Break/include/schemes/: HLLC_flux.hpp  HLL_flux.hpp  Rusanov_flux.hpp  flux_base.hpp
Euler_MR/: CMakeLists.txt  Euler_MR.cpp  input.json  main.cpp
Euler_MR/include/: Euler_MR.hpp  HLLC_flux.hpp  HLL_flux.hpp  Rusanov_flux.hpp  containers.hpp  eos.hpp  flux_base.hpp  prediction.hpp  utilities.hpp
Euler_MR/include/schemes/: HLLC_flux.hpp  HLL_flux.hpp  Rusanov_flux.hpp  flux_base.hpp
Interface_Inclusion/: interface_inclusion.cpp
Interface_Inclusion/include/: Exact_Godunov_flux.hpp  Rusanov_flux.hpp  SurfaceTension_flux.hpp  containers.hpp  flux_base.hpp  interface_inclsuion.hpp  interface_inclusion.hpp  interface_inclusion_Godunov_order1.hpp  two_scale_capillarity.hpp
Relaxation_BN_hierarchy/: CMakeLists.txt  input.json  main.cpp  plot_comparison.py  plot_results_comparison_flux.py  plot_results_comparison_relax.py  relaxation.cpp
Relaxation_BN_hierarchy/include/: HLLC_6eqs_flux.hpp  HLLC_6eqs_flux_conservative_alpha.hpp  HLLC_conservative_6eqs_flux.hpp  HLLC_conservative_6eqs_flux_conservative_alpha.hpp  HLLC_conservative_6eqs_internal_energy_flux.hpp  HLL_6eqs_flux.hpp  HLL_6eqs_flux_conservative_alpha.hpp  Rusanov_6eqs_flux.hpp  Rusanov_6eqs_flux_conservative_alpha.hpp  containers.hpp  eos.hpp  flux_6eqs_base.hpp  flux_6eqs_conservative_alpha_base.hpp  flux_6eqs_internal_energy_base.hpp  non_conservative_6eqs_flux.hpp  non_conservative_6eqs_flux_conservative_alpha.hpp  non_conservative_6eqs_internal_energy_flux.hpp  relaxation_6eqs.hpp  relaxation_6eqs_conservative_alpha.hpp  relaxation_6eqs_internal_energy.hpp
Relaxation_finite/: .gitignore  BN_solver.cpp  CMakeLists.txt  input.json  main.cpp  plot_results.py
Relaxation_finite/conda/: environment.yml
Relaxation_finite/include/: BN_solver.hpp  BN_solver_2D.hpp  BN_solver_generic.hpp  Rusanov_flux.hpp  Suliciu_scheme.hpp  Suliciu_scheme_interface.hpp  Suliciu_scheme_interface_2D.hpp  containers.hpp  eos.hpp  flux_base.hpp  non_conservative_flux.hpp  relaxations.hpp  user_bc.hpp  utilities.hpp
Relaxation_finite/include/Suliciu_base/: eos.hpp  etat_2D.hpp
Relaxation_finite/include/relaxation/: finite_rate_pT.hpp  finite_rate_pT_vel.hpp  finite_rate_pT_vel_split.hpp  relaxation_base.hpp  relaxation_dummy.hpp  relaxation_p.hpp  relaxation_vel.hpp  relaxation_vel_p.hpp  relaxation_vel_p_T.hpp
Relaxation_finite/include/schemes/: HLLC_flux_Daude.hpp  Rusanov_flux.hpp  Suliciu_scheme.hpp  Suliciu_scheme_interface.hpp  Suliciu_scheme_interface_2D.hpp  flux_base.hpp  non_conservative_flux.hpp
Relaxation_finite/include/schemes/Suliciu_base/: Riemannsol.hpp  eos_2D.hpp  flux_numeriques.hpp  flux_numeriques_2D.hpp
Static_Bubble/: CMakeLists.txt  main.cpp  static_bubble.cpp  two_scale_capillarity.hpp  two_scale_capillarity_FV.hpp
Static_Bubble/include/: Exact_Godunov_flux.hpp  Rusanov_flux.hpp  SurfaceTension_flux.hpp  containers.hpp  flux_base.hpp  static_bubble.hpp  two_scale_capillarity.hpp
TwoScale_Capillarity/: CMakeLists.txt  configure.sh  input.json  two_scale_capillarity.cpp  two_scale_capillarity.hpp  two_scale_capillarity_FV.hpp
TwoScale_Capillarity/include/: Exact_Godunov_flux.hpp  HLLC_flux.hpp  Rusanov_flux.hpp  SurfaceTension_flux.hpp  barotropic_eos.hpp  containers.hpp  flux_base.hpp  flux_base_eq_pres.hpp  prediction.hpp  two_scale_capillarity.hpp  two_scale_capillarity_eq_pres.hpp  user_bc.hpp
TwoScale_Capillarity/include/schemes/: Exact_Godunov_flux.hpp  HLLC_flux.hpp  Rusanov_flux.hpp  SurfaceTension_flux.hpp  flux_base.hpp  flux_base_eq_pres.hpp
TwoScale_Capillarity_NoMassTransfer/: CMakeLists.txt  input.json  two_scale_capillarity.cpp  two_scale_capillarity.hpp  two_scale_capillarity_FV.hpp
TwoScale_Capillarity_NoMassTransfer/include/: Exact_Godunov_flux.hpp  Exact_Godunov_flux_verbose.hpp  HLLC_flux.hpp  Relaxation_operator.hpp  Rusanov_flux.hpp  Rusanov_flux_verbose.hpp  SurfaceTension_flux.hpp  barotropic_eos.hpp  containers.hpp  flux_base.hpp  prediction.hpp  two_scale_capillarity.hpp  two_scale_capillarity_order1.hpp  user_bc.hpp
TwoScale_Capillarity_compressible_inclusions/: CMakeLists.txt  input.json  two_scale_capillarity.cpp
TwoScale_Capillarity_compressible_inclusions/include/: HLLC_flux.hpp  Rusanov_flux.hpp  SurfaceTension_flux.hpp  containers.hpp  flux_base.hpp  two_scale_capillarity.hpp  user_bc.hpp
TwoScale_Capillarity_full_compressible/: CMakeLists.txt  input.json  two_scale_capillarity.cpp
TwoScale_Capillarity_full_compressible/include/: HLLC_flux.hpp  Rusanov_flux.hpp  SurfaceTension_flux.hpp  containers.hpp  flux_base.hpp  prediction.hpp  two_scale_capillarity.hpp  user_bc.hpp  utilities.hpp
TwoScale_Capillarity_full_compressible/include/schemes/: HLLC_flux.hpp  Rusanov_flux.hpp  SurfaceTension_flux.hpp  flux_base.hpp
TwoScale_Capillarity_incompressible_inclusions/: CMakeLists.txt  input.json  two_scale_capillarity.cpp
TwoScale_Capillarity_incompressible_inclusions/include/: HLLC_flux.hpp  Rusanov_flux.hpp  SurfaceTension_flux.hpp  containers.hpp  flux_base.hpp  two_scale_capillarity.hpp  user_bc.hpp
TwoScale_Capillarity_incompressible_inclusions_0_23/include/: HLLC_flux.hpp  SurfaceTension_flux.hpp  containers.hpp  flux_base.hpp  two_scale_capillarity.hpp  user_bc.hpp
Waves_Interface/: CMakeLists.txt  main.cpp  plot_results.py  plot_results_comparison_eps_wave.py  waves_interface.cpp  waves_interface.hpp  waves_interface_FV.hpp
Waves_Interface/include/: Exact_Godunov_flux.hpp  Rusanov_flux.hpp  SurfaceTension_flux.hpp  barotropic_eos.hpp  containers.hpp  flux_base.hpp  waves_interface.hpp
